--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -252,7 +252,7 @@ figure {
  */
 /* line 253, ../sass/_normalize.scss */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 27, ../sass/screen.scss */
 a {
-  color: #527746;
+  color: #8abf78;
   text-decoration: none;
 }
 
@@ -449,7 +449,7 @@ p:first-of-type {
   position: fixed;
   z-index: -999;
 }
-/* line 38, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 #bgImage:after {
   content: "";
   display: table;
@@ -464,7 +464,7 @@ p:first-of-type {
 header {
   *zoom: 1;
 }
-/* line 38, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 header:after {
   content: "";
   display: table;
@@ -493,12 +493,12 @@ header nav ul li a {
   text-decoration: none;
   color: white;
   font-size: 1.353em;
-  text-shadow: 0.6px 0.6px 0px #000000;
+  text-shadow: 0.6px 0.6px 0px black;
   transition: color 0.36s ease 0.2s;
 }
 /* line 70, ../sass/screen.scss */
 header nav ul li a:hover {
-  color: #80d364;
+  color: #8abf78;
 }
 
 /* line 79, ../sass/screen.scss */
@@ -521,7 +521,7 @@ header nav ul li a:hover {
   *zoom: 1;
   width: 100%;
 }
-/* line 38, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 #contentWrap:after {
   content: "";
   display: table;
@@ -538,8 +538,29 @@ header nav ul li a:hover {
   color: white;
   border-radius: 4.2358px;
 }
+/* line 105, ../sass/screen.scss */
+#sideBarLeft h3 {
+  margin-top: 0;
+}
+/* line 108, ../sass/screen.scss */
+#sideBarLeft ul {
+  list-style: none;
+  padding: 0;
+}
+/* line 111, ../sass/screen.scss */
+#sideBarLeft ul li {
+  width: 100%;
+  background-color: #527746;
+  margin: 0.61805em 0;
+  text-align: right;
+  padding: 0.38198em 1em 0.38198em 0;
+}
+/* line 117, ../sass/screen.scss */
+#sideBarLeft ul li a {
+  color: white;
+}
 
-/* line 107, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #sideBarRight {
   float: right;
   width: 20%;
@@ -550,7 +571,7 @@ header nav ul li a:hover {
   border-radius: 4.2358px;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 #mainContent {
   float: left;
   width: 42%;
@@ -560,12 +581,12 @@ header nav ul li a:hover {
   color: white;
   border-radius: 4.2358px;
 }
-/* line 125, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 #mainContent h2 {
   margin-top: 0;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 #actionCall {
   float: right;
   background-color: rgba(178, 201, 110, 0.7);
@@ -576,4 +597,9 @@ header nav ul li a:hover {
   text-transform: uppercase;
   color: white;
   box-shadow: 2.61792px 2.61792px 0px 0px rgba(41, 49, 38, 0.7);
+}
+
+/* line 162, ../sass/screen.scss */
+.post footer {
+  font-size: 0.61805em;
 }
