--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -486,9 +486,14 @@ header nav ul li {
   float: left;
   margin: 1.618em 0;
   padding: 0.38198em 1.618em;
+  padding-left: 0;
   background-color: #303522;
 }
-/* line 64, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
+header nav ul li:first-of-type {
+  padding-left: 1.618em;
+}
+/* line 68, ../sass/screen.scss */
 header nav ul li a {
   text-decoration: none;
   color: white;
@@ -496,17 +501,17 @@ header nav ul li a {
   text-shadow: 0.6px 0.6px 0px #000000;
   transition: color 0.36s ease 0.2s;
 }
-/* line 70, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 header nav ul li a:hover {
   color: #8abf78;
 }
 
-/* line 79, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 #logoWrap {
   float: right;
   display: inline-block;
 }
-/* line 82, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 #logoWrap h1 {
   font-size: 2.61792em;
   color: #49338a;
@@ -516,7 +521,7 @@ header nav ul li a:hover {
   text-shadow: 1.14px 0.6px 0px #ccbff3;
 }
 
-/* line 92, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 #contentWrap {
   *zoom: 1;
   width: 100%;
@@ -528,7 +533,7 @@ header nav ul li a:hover {
   clear: both;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 #sideBarLeft {
   float: left;
   width: 16%;
@@ -538,16 +543,16 @@ header nav ul li a:hover {
   color: white;
   border-radius: 4.2358px;
 }
-/* line 105, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 #sideBarLeft h3 {
   margin-top: 0;
 }
-/* line 108, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 #sideBarLeft ul {
   list-style: none;
   padding: 0;
 }
-/* line 111, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 #sideBarLeft ul li {
   width: 100%;
   background-color: #527746;
@@ -555,7 +560,7 @@ header nav ul li a:hover {
   text-align: right;
   padding: 0.38198em 1em 0.38198em 0;
 }
-/* line 117, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 #sideBarLeft ul li a {
   color: white;
   display: inline-block;
@@ -563,23 +568,33 @@ header nav ul li a:hover {
   text-shadow: 0.6px 0.6px 0px black;
   transition: color 0.36s ease 0.2s;
 }
-/* line 123, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 #sideBarLeft ul li a:hover {
   color: #8abf78;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #sideBarRight {
   float: right;
   width: 20%;
-  padding: 1em;
+  padding: 0 1em 1em;
   margin: 1em 1em 1em 0.61805em;
   background-color: rgba(48, 53, 34, 0.7);
   color: white;
   border-radius: 4.2358px;
 }
+/* line 143, ../sass/screen.scss */
+#sideBarRight img {
+  width: 100%;
+  margin-top: 0;
+}
+/* line 147, ../sass/screen.scss */
+#sideBarRight iframe {
+  width: 100%;
+  height: 161px;
+}
 
-/* line 141, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 #mainContent {
   float: left;
   width: 42%;
@@ -589,19 +604,28 @@ header nav ul li a:hover {
   color: white;
   border-radius: 4.2358px;
 }
-/* line 149, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 #mainContent h2 {
   margin-top: 0;
   color: white;
   text-shadow: 0.6px 0.6px 0px black;
   transition: color 0.36s ease 0.2s;
 }
-/* line 154, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 #mainContent h2:hover {
   color: #8abf78;
 }
+/* line 170, ../sass/screen.scss */
+#mainContent img {
+  width: 100%;
+  margin-top: 0;
+}
+/* line 174, ../sass/screen.scss */
+#mainContent iframe {
+  width: 100%;
+}
 
-/* line 160, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 #actionCall {
   float: right;
   background-color: rgba(178, 201, 110, 0.7);
@@ -614,12 +638,12 @@ header nav ul li a:hover {
   box-shadow: 2.61792px 2.61792px 0px 0px rgba(41, 49, 38, 0.7);
 }
 
-/* line 175, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 .post footer {
   font-size: 0.61805em;
 }
 
-/* line 179, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 #aknowledgement {
   position: relative;
   display: inline-block;
@@ -630,7 +654,7 @@ header nav ul li a:hover {
   border-radius: 4.2358px;
   font-size: 0.83622em;
 }
-/* line 188, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 #aknowledgement a {
   text-shadow: 0.6px 0.6px 0px black;
 }
